--- a/app/src/main/res/layout/add_project_fragment.xml
+++ b/app/src/main/res/layout/add_project_fragment.xml
@@ -35,6 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="20dp"
+        android:background="@android:color/holo_orange_light"
         android:text="@string/add_project"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
