--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -17,8 +17,10 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="20dp"
+        android:background="@android:color/holo_orange_dark"
         android:padding="5dp"
-        android:text="@string/add_project"
+        android:text="@string/add_new_project"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
